--- a/style.css
+++ b/style.css
@@ -1558,3 +1558,116 @@ align-items: center;
 .back{
     animation: zoomout .5s ease;
 }
+
+.fnt-size-x-1{
+    font-size: 20px;
+    height: 20px;
+    margin: 0px;
+  
+}
+.set-public-post{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    
+  }
+  
+  .slider:before {
+    position: absolute;
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  #private:checked + .slider {
+    background-color: #2196F3;
+
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  .send-flex {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+  .set-public{
+    transition: all 0.5s !important;
+    width: 60px;
+    height: 30px;
+    border-radius: 10px;
+    background: linear-gradient(to left,rgb(226, 226, 226),grey);
+
+  }
+  .public{
+      width: 25px;
+      margin-top: 2.47px;
+      height: 25px;
+      background-color: white;
+      outline: none;
+      border: none;
+      box-shadow: 0px 0px 0px 1px rgb(119, 119, 119);
+      border-radius: 50%;
+      position: relative;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;    
+  }
+
+ .public-c{
+    position: relative;
+    top: 0;
+    left: 53%;
+    right: 0;
+    bottom: 0;
+    background-color: white;
+    transition: .5s;
+    border: none;
+    outline: none;
+    box-shadow: 0px 0px 0px 1px rgb(119, 119, 119);
+  }
+
+  .public-c-x{
+    box-shadow: inset 60px 0px 0px #104fb4;
+
+  }
+
+
