--- a/style.css
+++ b/style.css
@@ -1632,7 +1632,7 @@ align-items: center;
     transition: all 0.5s !important;
     width: 60px;
     height: 30px;
-    border-radius: 10px;
+    border-radius: 30px;
     background: linear-gradient(to left,rgb(226, 226, 226),grey);
 
   }
@@ -1669,5 +1669,37 @@ align-items: center;
     box-shadow: inset 60px 0px 0px #104fb4;
 
   }
+.public-private-option{
+    width: 350px;
+    height: 40px;
+    background: rgba(255, 255, 255, 0.8);
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    margin-top: 60px;
+}
 
+.post-button{
+    display: inline-block;
+    width: 50%;
+    border: none;
+    outline: none;
+    height: 100%;
+    font-size: 20px;
+    background-color: transparent;
+    color:grey;
+}
 
+.selected{
+    background: rgba(255, 255, 255, 0.8);
+    color: black;
+    transition: 285ms;
+}
+.fa-lock-open{
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+.fa-lock{
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
